TGR-922: Waiting for non-paired messages now works correctly