@@ -190,11 +190,11 @@ public class RbelMessageValidator {
         final String methodFilter = TigerGlobalConfiguration.readString("tiger.rbel.request.filter.method", "");
 
         final List<RbelElement> candidateMessages = msgs.stream()
-            .filter(el -> el.hasFacet(RbelHttpRequestFacet.class))
+            .filter(el -> !requestParameter.isRequireHttpMessage() || el.hasFacet(RbelHttpRequestFacet.class))
             .filter(req -> doesPathOfMessageMatch(req, requestParameter.getPath()))
             .filter(req -> hostFilter == null || hostFilter.isEmpty() || doesHostMatch(req, hostFilter))
             .filter(req -> methodFilter == null || methodFilter.isEmpty() || doesMethodMatch(req, methodFilter))
-            .collect(Collectors.toList());
+            .toList();
         if (candidateMessages.isEmpty()) {
             return Optional.empty();
         }
@@ -206,9 +206,11 @@ public class RbelMessageValidator {
                     + "Returning " + warnMsg + " message. This may not be deterministic!");
                 printAllPathsOfMessages(candidateMessages);
             }
-            return Optional.of(
-                requestParameter.isFilterPreviousRequest() ? candidateMessages.get(candidateMessages.size() - 1)
-                    : candidateMessages.get(0));
+            if (requestParameter.isFilterPreviousRequest()) {
+                return Optional.of(candidateMessages.get(candidateMessages.size() - 1));
+            } else {
+                return Optional.of(candidateMessages.get(0));
+            }
         }
 
         if (requestParameter.isFilterPreviousRequest()) {
